--- a/src/be/ac/ulb/infof307/g06/views/mainMenuViews/InvitationView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/mainMenuViews/InvitationView.fxml
@@ -4,34 +4,29 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="473.0" prefWidth="541.0" xmlns="http://javafx.com/javafx/15.0.1"
             fx:controller="be.ac.ulb.infof307.g06.views.mainMenuViews.InvitationViewController">
-   <children>
-      <VBox layoutX="33.0" layoutY="80.0" prefHeight="293.0" prefWidth="93.0" spacing="40.0">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="from : " wrappingWidth="51.13671875"/>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Project's name : "/>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description : "/>
-         </children>
-      </VBox>
-      <Button fx:id="acceptBtn" layoutX="63.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
-              prefHeight="25.0" prefWidth="152.0" stylesheets="@../../resources/stylesheets/Button.css" text="ACCEPT"/>
-      <Text fx:id="errorText" layoutX="12.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0"
-            text="You've been invited to collaborate on a project" textAlignment="CENTER" underline="true"
-            wrappingWidth="519.0">
-         <font>
+    <VBox layoutX="33.0" layoutY="80.0" prefHeight="293.0" prefWidth="93.0" spacing="40.0">
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="from : " wrappingWidth="51.13671875"/>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Project's name : "/>
+        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Description : "/>
+    </VBox>
+    <Button fx:id="acceptBtn" layoutX="63.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
+            prefHeight="25.0" prefWidth="152.0" stylesheets="@../../resources/stylesheets/Button.css" text="ACCEPT"/>
+    <Text fx:id="errorText" layoutX="12.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0"
+          text="You've been invited to collaborate on a project" textAlignment="CENTER" underline="true"
+          wrappingWidth="519.0">
+        <font>
             <Font name="Calibri" size="18.0"/>
-         </font>
-      </Text>
-      <Button fx:id="declineBtn" layoutX="334.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
-              prefHeight="25.0" prefWidth="152.0" stylesheets="@../../resources/stylesheets/Button.css" text="DECLINE"/>
-      <VBox layoutX="126.0" layoutY="80.0" prefHeight="314.0" prefWidth="395.0" spacing="40.0">
-         <children>
-            <TextField fx:id="senderNameTextField"/>
-            <TextField fx:id="projectNameTextField"/>
-            <TextField fx:id="descriptionTextField" prefHeight="160.0" prefWidth="340.0"/>
-         </children>
-      </VBox>
-   </children>
+        </font>
+    </Text>
+    <Button fx:id="declineBtn" layoutX="334.0" layoutY="405.0" mnemonicParsing="false" onAction="#events"
+            prefHeight="25.0" prefWidth="152.0" stylesheets="@../../resources/stylesheets/Button.css" text="DECLINE"/>
+    <VBox layoutX="126.0" layoutY="80.0" prefHeight="314.0" prefWidth="395.0" spacing="40.0">
+        <TextField fx:id="senderNameTextField"/>
+        <TextField fx:id="projectNameTextField"/>
+        <TextField fx:id="descriptionTextField" prefHeight="160.0" prefWidth="340.0"/>
+    </VBox>
 </AnchorPane>
