--- a/src/be/ac/ulb/infof307/g06/views/mainMenuViews/ProjectMenu.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/mainMenuViews/ProjectMenu.fxml
@@ -10,74 +10,80 @@
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/16"
             fx:controller="be.ac.ulb.infof307.g06.views.mainMenuViews.MenuViewController">
-   <children>
-      <HBox layoutX="303.0" layoutY="363.0" spacing="40.0">
-         <children>
-            <Button fx:id="projectManagementBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false"
-                    onAction="#events" prefHeight="201.0" prefWidth="432.0"
-                    stylesheets="@../../resources/stylesheets/Button.css"
-                    text="MANAGE PROJECTS " textFill="#f2f1f0">
-               <font>
-                  <Font size="36.0"/>
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND"/>
-               </cursor>
-            </Button>
-            <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#events" prefHeight="201.0"
-                    prefWidth="422.0" stylesheets="@../../resources/stylesheets/Button.css" text=" STATISTICS"
-                    textFill="#f2f1f0">
-               <font>
-                  <Font size="36.0"/>
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND"/>
-               </cursor>
-            </Button>
-         </children>
-      </HBox>
-      <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#events"
-              prefHeight="54.0" prefWidth="201.0" stylesheets="@../../resources/stylesheets/Button.css" text="BACK"
-              textFill="WHITE">
-         <font>
+    <cursor>
+        <Cursor fx:constant="DEFAULT"/>
+    </cursor>
+    <HBox layoutX="303.0" layoutY="363.0" spacing="40.0">
+        <Button fx:id="projectManagementBtn" layoutX="104.0" layoutY="356.0" mnemonicParsing="false"
+                onAction="#events" prefHeight="201.0" prefWidth="432.0"
+                stylesheets="@../../resources/stylesheets/Button.css"
+                text="MANAGE PROJECTS " textFill="#f2f1f0">
+            <font>
+                <Font size="36.0"/>
+            </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </Button>
+        <Button fx:id="statsAccessBtn" mnemonicParsing="false" onAction="#events" prefHeight="201.0"
+                prefWidth="422.0" stylesheets="@../../resources/stylesheets/Button.css" text=" STATISTICS"
+                textFill="#f2f1f0">
+            <font>
+                <Font size="36.0"/>
+            </font>
+            <cursor>
+                <Cursor fx:constant="HAND"/>
+            </cursor>
+        </Button>
+    </HBox>
+    <Button fx:id="mainMenuBtn" layoutX="1254.0" layoutY="817.0" mnemonicParsing="false" onAction="#events"
+            prefHeight="54.0" prefWidth="201.0" stylesheets="@../../resources/stylesheets/Button.css" text="BACK"
+            textFill="WHITE">
+        <font>
             <Font name="Calibri" size="24.0"/>
-         </font>
-         <cursor>
+        </font>
+        <cursor>
             <Cursor fx:constant="HAND"/>
-         </cursor>
-      </Button>
-      <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="384.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE">
-         <effect>
-            <Bloom />
-         </effect>
-      </Polygon>
-      <Polygon fill="#4ec8f50d" layoutX="-196.0" layoutY="384.0" points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 653.5999755859375, 516.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-205.0" layoutY="360.0" points="216.00001525878906, 539.2000122070312, 205.59999084472656, 33.0, 598.5999755859375, 540.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="324.0" points="162.00001525878906, 576.0, 161.59999084472656, 93.0, 483.5999755859375, 576.0" stroke="TRANSPARENT" strokeType="INSIDE" />
-      <Polygon fill="#4ec8f50d" layoutX="-156.0" layoutY="-29.0" points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 550.5999755859375, 29.0" stroke="TRANSPARENT" strokeType="INSIDE">
-         <effect>
-            <Bloom />
-         </effect>
-      </Polygon>
-      <Polygon fill="#4ec8f50d" layoutX="-194.0" layoutY="-46.0"
-               points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4ec8f50d" layoutX="-203.0" layoutY="-29.0"
-               points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Polygon fill="#4fc3f70d" layoutX="-160.0" layoutY="-36.0"
-               points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0"
-               stroke="TRANSPARENT" strokeType="INSIDE"/>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE"
-                 width="1500.0"/>
-      <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0"
-            text="Projects" wrappingWidth="504.9830722808838">
-         <font>
+        </cursor>
+    </Button>
+    <Polygon fill="#4ec8f50d" layoutX="-157.0" layoutY="384.0"
+             points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 685.5999755859375, 516.0" stroke="TRANSPARENT"
+             strokeType="INSIDE">
+        <effect>
+            <Bloom/>
+        </effect>
+    </Polygon>
+    <Polygon fill="#4ec8f50d" layoutX="-196.0" layoutY="384.0"
+             points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 653.5999755859375, 516.0" stroke="TRANSPARENT"
+             strokeType="INSIDE"/>
+    <Polygon fill="#4ec8f50d" layoutX="-205.0" layoutY="360.0"
+             points="216.00001525878906, 539.2000122070312, 205.59999084472656, 33.0, 598.5999755859375, 540.0"
+             stroke="TRANSPARENT" strokeType="INSIDE"/>
+    <Polygon fill="#4fc3f70d" layoutX="-162.0" layoutY="324.0"
+             points="162.00001525878906, 576.0, 161.59999084472656, 93.0, 483.5999755859375, 576.0" stroke="TRANSPARENT"
+             strokeType="INSIDE"/>
+    <Polygon fill="#4ec8f50d" layoutX="-156.0" layoutY="-29.0"
+             points="156.59999084472656, 516.0, 158.59999084472656, 29.0, 550.5999755859375, 29.0" stroke="TRANSPARENT"
+             strokeType="INSIDE">
+        <effect>
+            <Bloom/>
+        </effect>
+    </Polygon>
+    <Polygon fill="#4ec8f50d" layoutX="-194.0" layoutY="-46.0"
+             points="196.00001525878906, 516.0, 195.59999084472656, 32.0, 534.5999755859375, 32.0"
+             stroke="TRANSPARENT" strokeType="INSIDE"/>
+    <Polygon fill="#4ec8f50d" layoutX="-203.0" layoutY="-29.0"
+             points="205.59999084472656, 517.0, 205.59999084472656, 33.0, 456.5999755859375, 33.0"
+             stroke="TRANSPARENT" strokeType="INSIDE"/>
+    <Polygon fill="#4fc3f70d" layoutX="-160.0" layoutY="-36.0"
+             points="161.59999084472656, 522.0, 161.59999084472656, 26.0, 357.5999755859375, 26.0"
+             stroke="TRANSPARENT" strokeType="INSIDE"/>
+    <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1e1" height="77.0" stroke="#e1e1e1" strokeType="INSIDE"
+               width="1500.0"/>
+    <Text fill="WHITE" layoutX="13.0" layoutY="55.0" lineSpacing="1.0" strokeType="OUTSIDE" strokeWidth="0.0"
+          text="Projects" wrappingWidth="504.9830722808838">
+        <font>
             <Font name="Calibri" size="48.0"/>
-         </font>
-      </Text>
-   </children>
-   <cursor>
-      <Cursor fx:constant="DEFAULT"/>
-   </cursor>
+        </font>
+    </Text>
 </AnchorPane>
